Melhorias diversas.